--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       <br><button class="btn btn-default btn-lg">Get in Touch</button>
     </div>
     <div class="col-sm-4">
+       <img src="image/frame.jpg" alt="Frame" width="400" height="300">
       <span class="glyphicon glyphicon-signal logo"></span>
     </div>
   </div>
