--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
   <div class="row">
     <div class="col-sm-8">
       <h2>About Company Page</h2><br>
+      <a href = "https://docs.google.com/spreadsheets/d/1DuuTbBf_JIBf9tEn-Oawxq5TtPWfGbMbywLNMCbLDv8/edit?pli=1#gid=0"> Gant Chart Demo </a> " &nbsp; || &nbsp;"
+      <a href = "https://version7-1cdc0.web.app/login"> My Todo Project </a> " &nbsp; || &nbsp;"
+      <a href = ""> Download Assessment One </a> " &nbsp; || &nbsp;"
+      <a href = ""> Download Assessment Two </a>
       <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       <br><button class="btn btn-default btn-lg">Get in Touch</button>
