--- a/index.html
+++ b/index.html
@@ -143,23 +143,23 @@
   <div class="row text-center slideanim">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="image/paris.jpg" alt="Paris" width="400" height="300">
-        <p><strong>Paris</strong></p>
-        <p>Yes, we built Paris</p>
+        <img src="image/Capturetime.PNG" alt="Time" width="400" height="300">
+        <p><strong>Time</strong></p>
+        <p>Time is essential to achieve Goal and Press the Cost</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="image/newyork.jpg" alt="New York" width="400" height="300">
-        <p><strong>New York</strong></p>
-        <p>We built New York</p>
+        <img src="image/CaptureGoal.PNG" alt="GOAL" width="400" height="300">
+        <p><strong>Goal</strong></p>
+        <p>More Complex the goal, more time and cost will be needed</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="image/sanfran.jpg" alt="San Francisco" width="400" height="300">
-        <p><strong>San Francisco</strong></p>
-        <p>Yes, San Fran is ours</p>
+        <img src="image/CaptureCost.PNG" alt="Cost" width="400" height="300">
+        <p><strong>Cost</strong></p>
+        <p>The Longer time and complex the goal, There will be more increase in Cost</p>
       </div>
     </div>
   </div><br>
