--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   <link rel="icon" type="image/x-icon" href="image/favicon.ico">
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+    <center>
+    <h1>Here is the loading page Test...</h1>
+    <img src="images/project-management-skills.jpg"
+    </center>
 
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
@@ -305,5 +309,6 @@
 </footer>
 <!-- Load external JavaScript -->
 <script src="index.js"></script>
+<script src="loading.js"></script>
 </body>
 </html>
