--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="image/CaptureGoal.PNG" alt="GOAL" width="400" height="300">
+        <img src="image/Capturegoal.PNG" alt="GOAL" width="400" height="300">
         <p><strong>Goal</strong></p>
         <p>More Complex the goal, more time and cost will be needed</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="image/CaptureCost.PNG" alt="Cost" width="400" height="300">
+        <img src="image/Capturecost.PNG" alt="Cost" width="400" height="300">
         <p><strong>Cost</strong></p>
         <p>The Longer time and complex the goal, There will be more increase in Cost</p>
       </div>
