--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
     <center>
     <h1>Here is the loading page Test...</h1>
-    <img src="images/project-management-skills.jpg"
+    <img src="images/BYEBYE.GIF"
     </center>
 
 <nav class="navbar navbar-default navbar-fixed-top">
