--- a/index.html
+++ b/index.html
@@ -304,6 +304,6 @@
   <p>Powered by John 12345 Refer:<a href="https://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a></p>
 </footer>
 <!-- Load external JavaScript -->
-<script src="index.js"></script>
+<script src="index.js"></script><script src="loading.js"></script>
 </body>
 </html>
