--- a/index.html
+++ b/index.html
@@ -145,21 +145,21 @@
       <div class="thumbnail">
         <img src="image/Capturetime.PNG" alt="Time" width="400" height="300">
         <p><strong>Time</strong></p>
-        <p>Time is essential to achieve Goal and Press the Cost</p>
+        <a>Time is essential to achieve Goal and Press the Cost</a>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="image/Capturegoal.PNG" alt="GOAL" width="400" height="300">
         <p><strong>Goal</strong></p>
-        <p>More Complex the goal, more time and cost will be needed</p>
+        <a>More Complex the goal, more time and cost will be needed</a>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="image/Capturecost.PNG" alt="Cost" width="400" height="300">
         <p><strong>Cost</strong></p>
-        <p>The Longer time and complex the goal, There will be more increase in Cost</p>
+        <a>The Longer time and complex the goal, There will be more increase in Cost</a>
       </div>
     </div>
   </div><br>
