--- a/index.html
+++ b/index.html
@@ -171,17 +171,27 @@
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#myCarousel" data-slide-to="1"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
     </ol>
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
-      <div class="item active">
+      <div class="item">
+        <center>
+          <img src="image/workingonline.jpg" alt="carousel 1" width="400" height="400">
+        </center>
         <h4>"This company is the best. I am so happy with the result!"<br><span>Michael Roe, Vice President, Comment Box</span></h4>
       </div>
       <div class="item">
+        <img src="image/newyork.jpg" alt="carousel 2" width="400" height="400">
         <h4>"One word... WOW!!"<br><span>John Doe, Salesman, Rep Inc</span></h4>
       </div>
       <div class="item">
+        <img src="image/paris.jpg" alt="carousel 3" width="400" height="400">
+        <h4>"Could I... BE any more happy with this company?"<br><span>Chandler Bing, Actor, FriendsAlot</span></h4>
+      </div>
+      <div class="item">
+        <img src="image/map.jpg" alt="carousel 4" width="400" height="400">
         <h4>"Could I... BE any more happy with this company?"<br><span>Chandler Bing, Actor, FriendsAlot</span></h4>
       </div>
     </div>
