--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
-      <div class="item">
+      <div class="item active">
         <center>
           <img src="image/workingonline.jpg" alt="carousel 1" width="400" height="400" class="picture">
         </center>
