--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#about">ABOUT</a></li>
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#about">ABOUT <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Page 1-3</a></li>
+          <li><a href="#">Page 1-2</a></li>
+          <li><a href="#">Page 1-3</a></li>
+        </ul>
+        </li>
         <li><a href="#services">SERVICES</a></li>
         <li><a href="#portfolio">PORTFOLIO</a></li>
         <li><a href="#pricing">PRICING</a></li>
