--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com -->
-  <title>Project Managment Support</title>
+  <title>Project Management Support</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -29,11 +29,11 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#about">ABOUT <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Page 1-3</a></li>
-          <li><a href="#">Page 1-2</a></li>
-          <li><a href="#">Page 1-3</a></li>
-        </ul>
+          <ul class="dropdown-menu">
+            <li><a href="#page1">Page 1-3</a></li>
+            <li><a href="#page2">Page 1-2</a></li>
+            <li><a href="#page3">Page 1-3</a></li>
+          </ul>
         </li>
         <li><a href="#services">SERVICES</a></li>
         <li><a href="#portfolio">PORTFOLIO</a></li>
