--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#about">ABOUT <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#page1">Page 1-3</a></li>
-            <li><a href="#page2">Page 1-2</a></li>
-            <li><a href="#page3">Page 1-3</a></li>
+            <li><a href="#about">Page 1-3</a></li>
+            <li><a href="#about">Page 1-2</a></li>
+            <li><a href="#about">Page 1-3</a></li>
           </ul>
         </li>
         <li><a href="#services">SERVICES</a></li>
