--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </nav>
 
 <div class="jumbotron text-center">
-  <h1>Project Managment T3-2023</h1> 
+  <h1>Project Management T3-2023</h1> 
   <p>Powered by 12345 John</p> 
   <div class="form-group row">
     <div class="col-xs-3"> 
