--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">ABOUT <span class="caret"></span></a>
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> MORE <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#about">Page 1-3</a></li>
-            <li><a href="#services">Page 1-2</a></li>
-            <li><a href="#contact">Page 1-3</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#slide">Slide</a></li>
+            <li><a href="#services">Services</a></li>
           </ul>
         </li>
         <li><a href="#services">SERVICES</a></li>
