--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> MORE <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#about">About</a></li>
-            <li><a href="#slide">Slide</a></li>
+            <li><a href="#myCarousel">Slide</a></li>
             <li><a href="#services">Services</a></li>
           </ul>
         </li>
