--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <ul class="dropdown-menu">
             <li><a href="#about">About</a></li>
             <li><a href="#myCarousel">Slide</a></li>
-            <li><a href="#Chart">Promotion</a></li>
+            <li><a href="#promotion">Promotion</a></li>
             <li><a href="#services">Services</a></li>
           </ul>
         </li>
