--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
   <div class="promotion">
   <div class="row">
     <div class="col-sm-4">
-      <img src="image/Ganttchart.png" alt="Chart" width="500px" height="500px">
+      <span>
+      <img src="image/Ganttchart.png" alt="Chart">
+      </span>
     </div>
     <div class="col-sm-8">
       <h2>Promotion</h2><br>
