--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src='https://fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
   <link rel="stylesheet" href="mystyle.css" />
   <link rel="stylesheet" href="media.css" />
   <link rel="icon" type="image/x-icon" href="image/favicon.ico">
@@ -24,7 +25,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#myPage">12345</a>
+      <a class="navbar-brand" href="#myPage"><i class="fa-solid fa-person" style='font-size:12px'>12345</i></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
@@ -47,7 +48,7 @@
 
 <div class="jumbotron text-center">
   <h1>Project Management T3-2023</h1> 
-  <p>Powered by 12345 John</p> 
+  <p>Powered by 12345 Surya Dinata</p> 
   <div class="form-group row">
     <div class="col-xs-3"> 
     </div>
@@ -71,6 +72,7 @@
   <div class="row">
     <div class="col-sm-8">
       <h2>About Company Page</h2><br>
+      <c class='fas fa-user-circle' style='font-size:36px'></c>
       <a href = "https://docs.google.com/spreadsheets/d/1DuuTbBf_JIBf9tEn-Oawxq5TtPWfGbMbywLNMCbLDv8/edit?pli=1#gid=0"> Gant Chart Demo </a> " &nbsp; || &nbsp;"
       <a href = "https://version7-1cdc0.web.app/login"> My Todo Project </a> " &nbsp; || &nbsp;"
       <a href = "/Project-Management/download/XXXXX_Project Management_Assessment 1.docx"> Download Assessment One </a> " &nbsp; || &nbsp;"
@@ -87,7 +89,7 @@
   </div>
 </div>
 
-<div class="container-fluid ">
+<div class="container-fluid border">
   <div class="row">
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-globe logo slideanim"></span>
@@ -98,11 +100,12 @@
       <p><strong>VISION:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
-  </div>
+  </div>  
 </div>
   <!-- Container (Promotion Section) -->
+  
   <div class="promotion">
-  <div class="row">
+  <div class="row text-center">
     <div class="col-sm-4">
       
     </div>
@@ -112,7 +115,8 @@
       <p><strong>VISION:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
-    <img src="image/Ganttchart.png" alt="Chart" width="1000px" height="750px">
+    <v>
+    <img src="image/Ganttchart.png" class="text-center"  alt="Chart" width="1500px" height="750px"></v>
   </div>
 </div>
 
@@ -161,13 +165,13 @@
 <!-- Container (Portfolio Section) -->
 <div id="portfolio" class="container-fluid text-center">
   <h2>Portfolio</h2><br>
-  <h4>What we have created</h4>
+  <h4>What we have created</h4> 
   <div class="row text-center slideanim">
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="image/Capturetime.PNG" alt="Time" width="400" height="300">
         <p><strong>Time</strong></p>
-        <a>Time is essential to achieve Goal and Press the Cost</a>
+        <a>Time is essential to achieve Goal and Press the Cost of the Project</a>
       </div>
     </div>
     <div class="col-sm-4">
