--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <!-- Container (Promotion Section) -->
   
   <div class="promotion">
-  <div class="row text-center">
+  <div class="row">
     <div class="col-sm-4">
       
     </div>
@@ -115,7 +115,7 @@
       <p><strong>VISION:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
-    <v>
+    <v class="text-center">
     <img src="image/Ganttchart.png" class="text-center"  alt="Chart" width="1500px" height="750px"></v>
   </div>
 </div>
