--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <script src='https://fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+  <script src="https://fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="mystyle.css" />
   <link rel="stylesheet" href="media.css" />
-  <link rel="icon" type="image/x-icon" href="image/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="image/tab.png">
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
@@ -24,8 +26,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
-      </button>
-      <a class="navbar-brand" href="#myPage"><i class="fa-solid fa-person" style='font-size:12px'>12345</i></a>
+      </button> 
+      <c class="navbar-brand" href="#myPage"><i class='far fa-address-book'></i> 18620</c>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
@@ -71,8 +73,7 @@
 <div id="about" class="container-fluid bg-grey">
   <div class="row">
     <div class="col-sm-8">
-      <h2>About Company Page</h2><br>
-      <c class='fas fa-user-circle' style='font-size:36px'></c>
+      <h2><span class="glyphicon">&#xe021;</span> About Company Page</h2><br>
       <a href = "https://docs.google.com/spreadsheets/d/1DuuTbBf_JIBf9tEn-Oawxq5TtPWfGbMbywLNMCbLDv8/edit?pli=1#gid=0"> Gant Chart Demo </a> " &nbsp; || &nbsp;"
       <a href = "https://version7-1cdc0.web.app/login"> My Todo Project </a> " &nbsp; || &nbsp;"
       <a href = "/Project-Management/download/XXXXX_Project Management_Assessment 1.docx"> Download Assessment One </a> " &nbsp; || &nbsp;"
@@ -156,7 +157,7 @@
     </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-wrench logo-small"></span>
-      <h4 style="color:#303030;">HARD WORK</h4>
+      <h4 >HARD WORK</h4>
       <p>Lorem ipsum dolor sit amet..</p>
     </div>
   </div>
@@ -343,7 +344,7 @@
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>Powered by John 12345 Refer:<a href="https://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a></p>
+  <p>Powered by Surya Dinata Refer:<a href="https://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a></p>
 </footer>
 <!-- Load external JavaScript -->
 <script src="index.js"></script><script src="loading.js"></script>
