--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
       <a href = "https://docs.google.com/spreadsheets/d/1DuuTbBf_JIBf9tEn-Oawxq5TtPWfGbMbywLNMCbLDv8/edit?pli=1#gid=0"> Gant Chart Demo </a> " &nbsp; || &nbsp;"
       <a href = "https://version7-1cdc0.web.app/login"> My Todo Project </a> " &nbsp; || &nbsp;"
       <a href = "/Project-Management/download/XXXXX_Project Management_Assessment 1.docx"> Download Assessment One </a> " &nbsp; || &nbsp;"
-      <a href = "/Project-Management/download/XXXXX_Project Management_Assessment 2.docx""> Download Assessment Two </a>
+      <a href = "/Project-Management/download/XXXXX_Project Management_Assessment 2.docx"> Download Assessment Two </a>
       <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       <br><button class="btn btn-default btn-lg">Get in Touch</button>
     </div>
     
     <div class="col-sm-4">
-      <img src="image/frame.png" alt="frame" width="400" height="300">
+      <img src="image/frame.png" alt="frame" width="250" height="300"><br><br><br><br>
       <span class="glyphicon glyphicon-signal logo"></span>
     </div>
   </div>
@@ -165,7 +165,7 @@
 
 <!-- Container (Portfolio Section) -->
 <div id="portfolio" class="container-fluid text-center">
-  <h2>Portfolio</h2><br>
+  <h2>Portfolio</h2>
   <h4>What we have created</h4> 
   <div class="row text-center slideanim">
     <div class="col-sm-4">
@@ -344,7 +344,7 @@
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>Powered by Surya Dinata Refer:<a href="https://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a></p>
+  <p>Powered by Surya Dinata Refer:<a href="https://www.w3schools.com" title="Visit w3schools"> www.w3schools.com</a></p>
 </footer>
 <!-- Load external JavaScript -->
 <script src="index.js"></script><script src="loading.js"></script>
